WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
280791
Fix even more smart pointer warnings in Source/WebKit
https://bugs.webkit.org/show_bug.cgi?id=280791
Summary
Fix even more smart pointer warnings in Source/WebKit
Ryosuke Niwa
Reported
2024-10-02 16:07:49 PDT
Address more clang static analyzer warnings in Source/WebKit.
Attachments
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2024-10-02 16:25:38 PDT
Pull request:
https://github.com/WebKit/WebKit/pull/34601
EWS
Comment 2
2024-10-02 23:59:57 PDT
Committed
284603@main
(e66e7fe63fa8): <
https://commits.webkit.org/284603@main
> Reviewed commits have been landed. Closing PR #34601 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2024-10-03 00:00:23 PDT
<
rdar://problem/137185201
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug