Source/WebKit/Shared/ApplePay/WebPaymentCoordinatorProxy.h
@@ -124,6 +124,8 @@ public:
     const SharedPreferencesForWebProcess& sharedPreferencesForWebProcess() const { return m_client.sharedPreferencesForWebPaymentMessages(); }
 
 private:
+    Ref<WorkQueue> protectedCanMakePaymentsQueue() const;
+
     // IPC::MessageReceiver
     void didReceiveMessage(IPC::Connection&, IPC::Decoder&) override;
     bool didReceiveSyncMessage(IPC::Connection&, IPC::Decoder&, UniqueRef<IPC::Encoder>&) override;
